plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
	group = 'com.smartgrid'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	tasks.named('test') {
		useJUnitPlatform()
	}
}
